--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "create-servers": "~1.3.0",
     "forwarded-for": "~0.1.1",
-    "http-proxy": "~1.4.3",
+    "http-proxy": "^1.9.0",
     "minimist": "~1.1.0"
   }
 }
